General refactoring #7